Closed Bug 1497169 Opened 6 years ago Closed 6 years ago

ipc/chromium/src/third_party/Unified_c_src_third_party0.o: undefined symbol: arc4random_addrandom

Categories

(Core :: IPC, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox-esr60 --- fixed
firefox62 --- wontfix
firefox63 --- fixed
firefox64 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

Details

Attachments

(1 file)

FreeBSD 12.0 dropped arc4random_addrandom() but before that it was deprecated. Given backporting upstream commit would require updating platform configs and downstream package already defaults to --with-system-libevent let's adjust OpenBSD fix.

https://github.com/libevent/libevent/commit/6541168d7037
https://svnweb.freebsd.org/changeset/base/338331
https://svnweb.freebsd.org/changeset/ports/478104

$ c++ -v
FreeBSD clang version 7.0.0 (tags/RELEASE_700/final 342383) (based on LLVM 7.0.0)
Target: x86_64-unknown-freebsd12.0
Thread model: posix
InstalledDir: /usr/bin

$ ./mach bootstrap
$ ./mach build
[...]
13:43.83 ld: error: undefined symbol: arc4random_addrandom
13:43.83 >>> referenced by Unified_c_src_third_party0.c
13:43.83 >>>               ../../ipc/chromium/src/third_party/Unified_c_src_third_party0.o:(evutil_secure_rng_add_bytes)
13:43.97 clang++: error: linker command failed with exit code 1 (use -v to see invocation)
13:43.97 gmake[4]: *** [/tmp/mozilla-central/config/rules.mk:710: libxul.so] Error 1
Attachment #9015218 - Flags: review?(nfroyd) → review+
Keywords: checkin-needed
Pushed by nerli@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/4ef3760a29be
Unbreak bundled libevent on FreeBSD 12. r=froydnj
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/4ef3760a29be
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment on attachment 9015218 [details] [diff] [review]
v0

FreeBSD 12.0 release may happen during Firefox 63 life.
https://www.freebsd.org/releases/12.0R/schedule.html


[Beta/Release Uplift Approval Request]

Feature/Bug causing the regression: None

User impact if declined: Broken build on FreeBSD 12.0 (or later) unless .mozconfig contains --with-system-libevent.

Is this code covered by automated tests?: Yes

Has the fix been verified in Nightly?: Yes

Needs manual test from QE?: No

If yes, steps to reproduce: 

List of other uplifts needed: None

Risk to taking this patch: Low

Why is the change risky/not risky? (and alternatives if risky): Can only break build. evutil_secure_rng_add_bytes() is not used by Firefox.

String changes made/needed:
Attachment #9015218 - Flags: approval-mozilla-beta?
Comment on attachment 9015218 [details] [diff] [review]
v0

Sorry, this is too late in the Beta cycle (we build the last 63 beta on Thursday before entering RC) to uplift unplanned tier-3 patches as we need to minimize any potential regression for the final release.
Attachment #9015218 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
Comment on attachment 9015218 [details] [diff] [review]
v0

This is NPOTB, we should take this.
Attachment #9015218 - Flags: approval-mozilla-beta-
Whiteboard: [checkin-needed-beta][checkin-needed-esr60]
https://hg.mozilla.org/releases/mozilla-beta/rev/a571fb22559a
Whiteboard: [checkin-needed-beta][checkin-needed-esr60] → [checkin-needed-esr60]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: