Bug 1497169 - Unbreak bundled libevent on FreeBSD 12. r=froydnj